<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/beethoven"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/beethoven" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@android:color/black">

                <TextView
                    android:id="@+id/textName1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/beethoven_n_l"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light" />

                <TextView
                    android:id="@+id/textHome1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/country_germany"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light" />

                <TextView
                    android:id="@+id/textAge1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingEnd="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/beethoven_age"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/chopin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="4dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/chopin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textName2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/chopin_n_l"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/textHome2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/country_poland"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/textAge2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingEnd="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/chopin_age"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tchaikovsky"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/tchaikovsky" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@android:color/black"
                >

                <TextView
                    android:id="@+id/textName3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/tchaikovsky_n_l"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light" />

                <TextView
                    android:id="@+id/textHome3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/country_russia"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light" />

                <TextView
                    android:id="@+id/textAge3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingEnd="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/tchaikovsky_age"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bach"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="4dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/bach" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textName4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/bach_n_l"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/textHome4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/country_germany"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/textAge4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingEnd="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/bach_age"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mozart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            >

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/mozart" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@android:color/black"
                >

                <TextView
                    android:id="@+id/textName5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/mozart_n_l"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light" />

                <TextView
                    android:id="@+id/textHome5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/country_austria"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light" />

                <TextView
                    android:id="@+id/textAge5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingEnd="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/mozart_age"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vivaldi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="4dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/vivaldi" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textName6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/vivaldi_n_l"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/textHome6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/country_italy"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/textAge6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingEnd="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/vivaldi_age"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rachmaninoff"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            >

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/rachmaninoff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@android:color/black"
                >

                <TextView
                    android:id="@+id/textName7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/rachmaninoff_n_l"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light" />

                <TextView
                    android:id="@+id/textHome7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/country_russia"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light" />

                <TextView
                    android:id="@+id/textAge7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingEnd="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/rachmaninoff_age"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/satie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/satie" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textName8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/satie_n_l"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/textHome8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/country_france"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/textAge8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingEnd="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/satie_age"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>